# coreblocks

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .vale.ini  Assumptions.html  Current_graph.html  Development_environment.html  Home.html  LICENSE  Problem-checklist.html  README.md  Readme.md  Transactions.html  api.html  asdasdsadtest.py  assumptions.html  auto_graph.html  coreblocks.arch.html  coreblocks.backend.html  coreblocks.cache.html  coreblocks.core_structs.html  coreblocks.frontend.bpu.html  coreblocks.frontend.decoder.html  coreblocks.frontend.fetch.html  coreblocks.frontend.html  coreblocks.fu.html  coreblocks.fu.unsigned_multiplication.html  coreblocks.func_blocks.fu.common.html  coreblocks.func_blocks.fu.fpu.html  coreblocks.func_blocks.fu.html  coreblocks.func_blocks.fu.lsu.html  coreblocks.func_blocks.fu.unsigned_multiplication.html  coreblocks.func_blocks.html  coreblocks.func_blocks.interface.html  coreblocks.func_blocks.lsu.html  coreblocks.html  coreblocks.lsu.html  coreblocks.params.html  (+46 more)
.doctrees/: Assumptions.doctree  Current_graph.doctree  Development_environment.doctree  Home.doctree  Problem-checklist.doctree  Transactions.doctree  api.doctree  assumptions.doctree  auto_graph.doctree  coreblocks.arch.doctree  coreblocks.backend.doctree  coreblocks.cache.doctree  coreblocks.core_structs.doctree  coreblocks.doctree  coreblocks.frontend.bpu.doctree  coreblocks.frontend.decoder.doctree  coreblocks.frontend.doctree  coreblocks.frontend.fetch.doctree  coreblocks.fu.doctree  coreblocks.fu.unsigned_multiplication.doctree  coreblocks.func_blocks.doctree  coreblocks.func_blocks.fu.common.doctree  coreblocks.func_blocks.fu.doctree  coreblocks.func_blocks.fu.fpu.doctree  coreblocks.func_blocks.fu.lsu.doctree  coreblocks.func_blocks.fu.unsigned_multiplication.doctree  coreblocks.func_blocks.interface.doctree  coreblocks.func_blocks.lsu.doctree  coreblocks.lsu.doctree  coreblocks.params.doctree  coreblocks.peripherals.doctree  coreblocks.priv.csr.doctree  coreblocks.priv.doctree  coreblocks.priv.traps.doctree  coreblocks.priv.vmem.doctree  coreblocks.scheduler.doctree  coreblocks.stages.doctree  coreblocks.structs_common.doctree  coreblocks.telemetry.doctree  coreblocks.transactions.doctree  (+17 more)
_sources/: Development_environment.md.txt  Home.md.txt  api.md.txt  auto_graph.rst.txt  coreblocks.arch.rst.txt  coreblocks.backend.rst.txt  coreblocks.cache.rst.txt  coreblocks.core_structs.rst.txt  coreblocks.frontend.bpu.rst.txt  coreblocks.frontend.decoder.rst.txt  coreblocks.frontend.fetch.rst.txt  coreblocks.frontend.rst.txt  coreblocks.fu.rst.txt  coreblocks.fu.unsigned_multiplication.rst.txt  coreblocks.func_blocks.fu.common.rst.txt  coreblocks.func_blocks.fu.fpu.rst.txt  coreblocks.func_blocks.fu.lsu.rst.txt  coreblocks.func_blocks.fu.rst.txt  coreblocks.func_blocks.fu.unsigned_multiplication.rst.txt  coreblocks.func_blocks.interface.rst.txt  coreblocks.func_blocks.lsu.rst.txt  coreblocks.func_blocks.rst.txt  coreblocks.lsu.rst.txt  coreblocks.params.rst.txt  coreblocks.peripherals.rst.txt  coreblocks.priv.csr.rst.txt  coreblocks.priv.rst.txt  coreblocks.priv.traps.rst.txt  coreblocks.priv.vmem.rst.txt  coreblocks.rst.txt  coreblocks.scheduler.rst.txt  coreblocks.stages.rst.txt  coreblocks.structs_common.rst.txt  coreblocks.telemetry.rst.txt  coreblocks.transactions.rst.txt  coreblocks.utils.rst.txt  current-graph.md.txt  home.md.txt  index.md.txt  modules-coreblocks.rst.txt  (+8 more)
ci/: build-docs.sh  build_docs.sh  print_benchmark_summary.py  push_docs.sh  push_gh_pages.sh  riscof_compare.sh  riscof_run_makefile.sh
components/: icache.html
constants/: benchmark_information.py  ecp5_pinout.py  ecp5_platforms.py  platform_utils.py  xilinx_platforms.py
coreblocks/: _typing.py  another_reorder_buffer.py  backend.py  core.py  decode.py  decoder.py  fetch.py  functional_unit.py  gen_verilog.py  genparams.py  isa.py  layouts.py  mul_params.py  mul_unit.py  rat.py  reorder_buffer.py  retirement.py  rf.py  rs.py  scheduler.py  unsigned_mul_unit.py  utils.py  wakeup_select.py  wishbone.py
docker/: AmaranthSynthECP5.Dockerfile  AmaranthSynthXilinx.Dockerfile  Verilator.Dockerfile  riscv-toolchain.Dockerfile
docs/: Assumptions.md  Current_graph.md  Development_environment.md  Home.md  Problem-checklist.md  Readme.md  Transactions.md  api.md  assumptions.md  benchmark_index.html  conf.py  current-graph.md  development-environment.md  home.md  index.md  problem-checklist.md  todo.md  transactions.md  wiki_exclude
examples/: transactions_example.py  wishbone_wbm_example.py
miscellany/: exceptions-summary.html  exceptionsSummary.html
renode/: README.md  build_plugin.sh  riscv-instructions.h  sim_coreblocks.cpp  sim_coreblocks.h  sim_main.cpp  verilated_coreblocks.repl  verilated_coreblocks.resc
scheduler/: Overview.html  overview.html
scripts/: activate_environment.sh  benchmark_info  build-docs.sh  build_docs.sh  check_test_results.py  core_graph  core_graph.py  coreblocks_pytest_plugin.py  deactivate_environment.sh  gen_verilog  gen_verilog.py  lint.sh  parse_benchmark_info.py  run_benchmarks.py  run_signature.py  run_tests  run_tests.py  synthesize  synthesize.py  tprof.py
shared-structs/: rs.html
shared_structs/: RS.html
synthesis/: Synthesis.html  synthesis.html
test/: common.py  conftest.py  coreblocks_test_case.py  functional_common.py  gtkw_extension.py  message_framework.py  message_queue.py  simulation.py  test_adapter.py  test_assign.py  test_backend.py  test_core.py  test_decode.py  test_decoder.py  test_dependentcache.py  test_fetch.py  test_functional_unit.py  test_isa.py  test_methods.py  test_mul_unit.py  test_onehotswitch.py  test_reorder_buffer.py  test_retirement.py  test_rf.py.bak  test_rs.py  test_scheduler.py  test_transaction_lib.py  test_transactions.py  test_unsigned_mul_unit.py  test_wakeup_select.py  test_wishbone.py  transactional_testing.py  wishbone_tb.py
transactions/: _utils.py  core.py  example.py  lib.py
transactron/: __init__.py  _utils.py  core.py  graph.py  lib.py  profiler.py  tracing.py
(+668 files in other folders)
