[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coreblocks"
version = "0.0.0"
description = "RISC-V out-of-order core for education and research purposes"
requires-python = ">=3.11"
dependencies = [
    "amaranth==0.5.8",
    "amaranth-stubs==0.1.2",
    "amaranth-yosys==0.40.0.0.post100",
    "dataclasses-json==0.6.3",
    "transactron==0.5.1",
]

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "docutils==0.15.2",
    "flake8==7.0.0",
    "pep8-naming==0.13.3",
    "markupsafe==2.0.1",
    "myst-parser==0.18.0",
    "numpydoc==1.5.0",
    "parameterized==0.8.1",
    "pre-commit==2.16.0",
    "pyright==1.1.393",
    "Sphinx==5.1.1",
    "sphinx-rtd-theme==1.0.0",
    "sphinxcontrib-mermaid==0.8.1",
    "cocotb==1.8.1",
    "cocotb-bus==0.2.1",
    "pytest==8.0.0",
    "pytest-xdist==3.5.0",
    "pyelftools==0.29",
    "tabulate==0.9.0",
    "filelock==3.13.1",
    "hypothesis==6.99.6",
]

[tool.setuptools.packages.find]
include = ["coreblocks*"]
