[build-system]
requires = ["setuptools>=69", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "coreblocks"
dynamic = ["version"]
description = "RISC-V out-of-order core for education and research purposes"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "amaranth~=0.5.8",
    "amaranth-stubs~=0.5.0.0",
    "amaranth-yosys==0.40.0.0.post100",
    "dataclasses-json==0.6.3",
    "transactron @ git+https://github.com/tilk/transactron@0ca55ff3a92054db908a1972c3f28c0d3ba813ae",
]

[project.urls]
Homepage = "https://kuznia-rdzeni.org"
Documentation = "https://kuznia-rdzeni.github.io/coreblocks/"
Repository = "https://github.com/kuznia-rdzeni/coreblocks"
Issues = "https://github.com/kuznia-rdzeni/coreblocks/issues"

[project.optional-dependencies]
dev = [
    # Linting
    "pyright==1.1.393",
    "flake8==7.0.0",
    "black==24.4.2",
    # Testing
    "pytest==8.0.0",
    "pytest-xdist==3.5.0",
    "hypothesis==6.99.6",
    "parameterized==0.8.1",
    "cocotb==1.9.2",
    "cocotb-bus==0.2.1",
    "docutils==0.21.2",
    "markupsafe==2.0.1",
    # Documentation
    "pep8-naming==0.13.3",
    "Sphinx==8.2.3",
    "sphinx-rtd-theme==3.0.2",
    "myst-parser==4.0.1",
    "numpydoc==1.5.0",
    "sphinxcontrib-mermaid==0.8.1",
    # Other
    "pre-commit==2.16.0",
    "pyelftools==0.29",
    "tabulate==0.9.0",
    "filelock==3.13.1",
]

[tool.setuptools.packages.find]
include = ["coreblocks*"]

[tool.setuptools_scm]

[tool.pyright]
include = [
    "coreblocks",
    "test",
    "constants",
    "scripts",
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/external",
]
ignore = []
reportMissingImports = true
reportMissingTypeStubs = false
reportWildcardImportFromLibrary = false
pythonVersion = "3.11"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
minversion = "7.2.2"
testpaths = [
    "tests",
]
norecursedirs = [
    "*.egg",
    ".*",
    "build",
    "dist",
    "venv",
    "__traces__",
    "__pycache__",
    "test/external",
]
filterwarnings = [
    "ignore:cannot collect test class 'TestbenchContext':pytest.PytestCollectionWarning",
    "ignore:cannot collect test class 'TestbenchIO':pytest.PytestCollectionWarning",
    "ignore:No files were found in testpaths:pytest.PytestConfigWarning:",
]
